ipc/ipdl/test/ipdl/error/IntrSyncManagee.ipdl
include protocol IntrSyncManager;

intr protocol IntrSyncManagee {
    manager IntrSyncManager;
child:
    async __delete__();
};
